# superpowers

./: .env  .eslintrc.json  .gemini-extension-install.json  .gitattributes  .gitignore  .gitmodules  .horspowers-config.template.yaml  .npmignore  .orphaned_at  .pre-commit-config.yaml  .superpowers-config.template.yaml  .superpowers-config.yaml  .superpowers-config.yaml.example  .version-bump.json  123-123_AAA_BBB  23-310_Abrolova_Maftuna  AGENTS.md  AGY.md  AMPLIFIER-AGENTS.md  BUILD-TRACKER.md  CHANGELOG.md  CLAUDE.md  CODEOWNER  CODE_OF_CONDUCT.md  CONTRIBUTING-FORK.md  CONTRIBUTING.md  Cargo.toml  DEEPSEEK.md  DEPENDENCIES  EMAIL-CALENDAR-AGENT-DELIVERABLES.md  EXTENSION.md  GEMINI.md  GUARDRAILS.md  IMPLEMENTATION_PLAN.md  IMPORT_GUIDE.md  IMPROVEMENTS.md  INSTALL.md  Integrating Custom Skills and Agents into a Optimized Superpowers Plugin.txt  LICENSE  MARS_TradingBot.cs  (+113 more)
.Jules/: palette.md
.Kiro/: README.md  power.json
.agy-plugin/: plugin.json
.antigravity/: INSTALL.md  superpowers-antigravity  superpowers-bootstrap.md
.antigravity-plugin/: INSTALL.md  plugin.json
.beads/: issues.jsonl
.cargo/: config.toml
.claude/: project-flows.json  settings.json  settings.local.json
.claude-code-for-web/: DOT-CLAUDE-DOCS.md  INSTALL.md  README.md  bootstrap.md  skills-list.md
.claude-plugin/: marketplace.json  plugin.json
.cline/: INSTALL.md  bootstrap.md  plugin.json
.codebuddy/: INSTALL.md  settings.local.json
.codex/: INSTALL.md  Update.md  hyperpowers-bootstrap.md  hyperpowers-codex  superpowers-bootstrap.md  (+2 more)
.codex-plugin/: plugin.json
(+6022 files in other folders)
